# allegro5

./: CMakeLists.txt
addons/: CMakeLists.txt
addons/acodec/: ogg.c
addons/font/: font.c  text.c
addons/font/allegro5/: allegro_font.h
addons/olf/: CMakeLists.txt  olf.c
addons/olf/allegro5/: allegro_olf.h
addons/olf/allegro5/internal/: aintern_olf_cfg.h.cmake
addons/primitives/: prim_opengl.c
addons/ttf/: ttf.c
cmake/: FileList.cmake  FindXInput.cmake
demos/cosmic_protector/src/: DisplayResource.cpp
demos/speed/: main.c
docs/: Refman.cmake  inc.a.html
docs/src/refman/: fshook.txt  haptic.txt  utf8.txt
examples/: CMakeLists.txt  ex_bitmap.c  ex_cpu.c  ex_dir.c  ex_font.c  ex_font_multiline.cpp  ex_haptic.c  ex_haptic2.cpp  ex_joystick_events.c  ex_joystick_hotplugging.c  ex_olf.c  ex_prim.c  ex_utf8.c  nihgui.cpp  nihgui.hpp
include/allegro5/: allegro.h  cpu.h  display.h  fshook.h  haptic.h  utf8.h
include/allegro5/internal/: aintern_android.h  aintern_display.h  aintern_haptic.h  aintern_ljoynu.h  aintern_osxjoy.h  aintern_sal.h  aintern_system.h  aintern_wjoydxnu.h  (+2 more)
misc/: allegro_olf.pc.in
src/: cpu.c  display.c  fshook.c  haptic.c  transformations.c  utf8.c
src/android/: android_haptic.c  android_system.c
src/linux/: lhaptic.c  ljoynu.c
src/macosx/: hidjoy-10.4.m  hidjoy.m  osxhaptic.c
src/opengl/: ogl_display.c
src/unix/: uhapdrv.c
src/win/: d3d_disp.cpp  whapall.c  whaptic.c  whaptic.cpp  whapxi.c  wjoyall.c  wjoydrv.c  wjoydxnu.cpp  wjoyxi.c  wsystem.c
src/x/: xdisplay.c  xfullscreen.c  xrandr.c  xsystem.c
(+8 files in other folders)
